# ValeDecem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Vale Decem.sln  Vale Decem.vcxproj  Vale Decem.vcxproj.filters
assets/sponza/: sponza.mtl
assets/tardis/: tardis.mtl
include/: AmbiantLight.h  Cube.h  CubemapTexture.h  DirectionalLight.h  FXFbo.h  FreeFlyCamera.h  GBuffer.h  GLProgram.h  GLTexture.h  GUI.h  MatrixStack.h  Mesh.h  Plane.h  PointLight.h  Project.h  ShadowMap.h  SpotLight.h  Vertex.h
lib/assimp/include/assimp/: types.h
shaders/: ambiantLight.fs.glsl  blit.fs.glsl  blit.vs.glsl  coc.fs.glsl  directionalLight.fs.glsl  gbuffer.vs.glsl  light.fs.glsl  ood.fs.glsl  ood.vs.glsl  pointLight.fs.glsl  simple.fs.glsl  simple.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  spotLight.fs.glsl
src/: Cube.cpp  CubemapTexture.cpp  FXFbo.cpp  GBuffer.cpp  GLProgram.cpp  GLTexture.cpp  GUI.cpp  Mesh.cpp  Plane.cpp  Project.cpp  ShadowMap.cpp  main.cpp
